# fits

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  todo.txt
benches/: compress.rs  decode.rs  read.rs
docs/: ROADMAP.md  conformance.md
docs/refs/: 01-file-structure.md  02-headers-keywords.md  03-data-representation.md  05-ascii-tables.md  06-binary-tables.md  07-wcs-time-compression.md  08-conventions.md  README.md  fits_standard40.md
examples/: compression.rs  image.rs  inspect.rs  ndarray.rs  read_write.rs  table.rs  time.rs  wcs.rs
src/: ascii.rs  block.rs  checksum.rs  complex.rs  compress.rs  data.rs  endian.rs  error.rs  groups.rs  keyword.rs  lib.rs  reader.rs  writer.rs
src/ascii/: mod.rs  tests.rs
src/compress/: convert.rs  geometry.rs  gzip.rs  hcompress.rs  mod.rs  plio.rs  quantize.rs  rice.rs  table.rs  tests.rs
src/data/: mod.rs  tests.rs
src/groups/: mod.rs  tests.rs
src/hdu/: mod.rs  tests.rs
src/header/: card.rs  mod.rs  tests.rs  value.rs
src/header/card/: mod.rs  tests.rs
src/reader/: mod.rs  source.rs  tests.rs
src/table/: mod.rs  tests.rs
src/time/: mod.rs  tests.rs
src/wcs/: frame.rs  mod.rs  tests.rs
src/writer/: mod.rs  tests.rs
tests/data/fits/: README.md  comp_gzip_i16.fits  comp_rice_i16.fits  comp_table_cfitsio.fits  comp_table_ref.fits  wcs_tan.fits
