[package]
name = "fits"
version = "0.1.0"
edition = "2024"
description = "A blazing-fast reader and writer for FITS (Flexible Image Transport System) files, targeting the full FITS 4.0 standard."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xxorza/fits"
keywords = ["fits", "astronomy", "image", "fileformat"]
categories = ["science", "parser-implementations"]

[dependencies]
